-Added text.toHex8, toHex16, toHex32
-Added text.getEncList
-Added text.TextBinEnc
-Added text.UTF8TextBinEnc
-Added text.UTF8LCaseTextBinEnc
-Added text.UTF8UCaseTextBinEnc
-Added text.HexTextBinEnc
-Added text.Base64Enc
-Added text.UTF16LETextBinEnc
-Added text.UTF16BETextBinEnc
-Added text.CPPByteArrBinEnc
-Added text.CPPTextBinEnc
-Added text.QuotedPrintableEnc

1.5.1
-Fixed AngleUnit problem

1.5.0
-Change unit.AngleUnit and unit.DistanceUnit to unit.Angle.Unit and unit.Distance.Unit
-Added unit.Acceleration
-Added unit.ApparentPower
-Added unit.Count
-Added unit.ElectricCurrent
-Added unit.ElectricPotential
-Added unit.Energy
-Added unit.Force
-Added unit.Frequency
-Added unit.MagneticField
-Added unit.Mass
-Added unit.Power
-Added unit.Pressure
-Added unit.Ratio
-Added unit.ReactiveEnergy
-Added unit.ReactivePower
-Added unit.Speed
-Added unit.Temperature
-Added osm.scale2Level
-Adding leaflet.LeafletMap
-Adding cesium.CesiumMap
-Added web.appendUrl
-Added parser.js
-Added text.arrayToNumbers
-Added leaflet.createFromKMLFeature
-Added leaflet.createGeometry

1.4.1
-Fixed problems in Chrome

1.4.0
-Added LinearRing.createFromCircle
-Full support kml.IconStyle
-Added LinearRing.toPolygon
-Added map.MapControl
-Added OpenLayers2 supporting (olayer2.js)
-Added web.handleFileDrop
-Added map.WMS
-Added leaflet.fromLatLngBounds

1.3.1
-Added leaflet.createLayer
-Added web.buildTable
-Added map.GeolocationFilter
-Added math.RectArea
-Added KML handling
-Added web.openData
-Added leaflet.createKMLLookAt
-Added leaflet.toKMLFeature
-Added leaflet.toKMLString
-Added web.parseCSSColor

1.3.0
-Update geometry types
-Support Dialog margin

1.2.4
-Added hkoapi
-Added data.mergeOptions
-Added web.Dialog

1.2.3
-Fixed DateTimeUtil.toString infinity loop
-Fixed Distance Calculation
-Added data.sort
-Added CoordinateSystem.convert functions

1.2.2
-Added text.toAttrText(), text.toXMLTest();
-Enhance text.toJSText()
-Change and export text.zeroPad
-Update README