@@ -5,6 +5,12 @@ export function arrayBuffer2Base64(buff: any): string;
 export function compare(a: any, b: any): number;
 export function sort(arr: object[], compareFunc?: (val1: object, val2: object) => number, firstIndex?: number, lastIndex?: number): void;
 export function mergeOptions(options: object | null, defOptions: object): object;
+export function readUInt16(arr: Uint8Array, index: number): number;
+export function readMUInt16(arr: Uint8Array, index: number): number;
+export function readUInt24(arr: Uint8Array, index: number): number;
+export function readMUInt24(arr: Uint8Array, index: number): number;
+export function readUInt32(arr: Uint8Array, index: number): number;
+export function readMUInt32(arr: Uint8Array, index: number): number;
 
 export class DateValue
 {
