@@ -1,0 +1,2 @@
+export function oidText2PDU(txt: string): Uint8Array;
+export function oidToString(oid: ArrayBuffer): string;
